# AAVC_calculate_tool

./: .gitignore  AAVC_vs_DCA_report_QQQ.md  CONTRIBUTING.md  GEMINI.md  LICENSE.md  README.md  config.yaml  create_report.py  my_custom_log.csv  pyproject.toml  requirements.txt  run_deterministic_aavc_sim.py  run_historical_aavc_sim.py  run_rolling_aavc_sim.py  test_log.csv
.github/workflows/: monthly_notification.yml
AAVC_calculate_tool/: __main__.py  data_loader.py  main.py
Doc/: 01_CLI_Detailed_Design.md  01_CLI_Specification.md  02_Data_Acquisition.md  02_Data_Acquisition_Detailed_Design.md  03_Configuration_and_Logging.md  03_Configuration_and_Logging_Detailed_Design.md  04_Backtesting.md  04_Backtesting_Detailed_Design.md  05_Backtest_Comparison.md  05_Backtest_Comparison_Detailed_Design.md  06_Multi_Algorithm_Comparison.md  06_Multi_Algorithm_Comparison_Detailed_Design.md  07_Monthly_Notification_Feature.md  07_Monthly_Notification_Feature_Detailed_Design.md  AAVC_Deep_Dive_Manual.md  API_Reference.md  Backtest_Usage_Guide.md  Developer_Guide.md  Documentation_Index.md  Quick_Start_Guide.md
Qiita/: 1_idea.md  2_AAVC_vs_DCA_vs_B&H.md  3_Advanced_AAVC_Strategies.md  4_Monthly_Notification.md
logs/: test_log.csv
reports/: AAVC_vs_DCA_report.md
scripts/: simulate_prices.py
src/AAVC_calculate_tool/: __main__.py  algorithm_registry.py  backtester.py  calculator.py  config_loader.py  data_loader.py  (+6 more)
tests/: test_backtester.py  test_calculator.py  test_cli.py  test_config_loader.py  test_data_loader.py  test_display.py  test_plotter.py  test_recorder.py
