[project]
name = "AAVC_calculate_tool"
version = "0.1.0"
description = "A tool to calculate investment amounts based on the AAVC algorithm."
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.8"
dependencies = [
    "numpy",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "mypy",
    "isort",
    "pytest",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = []

[tool.mypy]
python_version = "3.8"
warn_return_any = true
ignore_missing_imports = true
